--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.cssS">
     <style>
         @media screen and (max-width: 1400px) {
             footer{
@@ -94,11 +94,11 @@
             <div class="left">Aditya's Portfolio</div>
             <div class="right">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
-                    <li><a href="/contact us.html">Contact Us</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="templates/about.html">About</a></li>
+                    <li><a href="templates/services.html">Services</a></li>
+                    <li><a href="templates/projects.html">Projects</a></li>
+                    <li><a href="templates/contact us.html">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
